Refactor ProgressBar class to define length as a local variable in printMsgWithProgressBar method